apps/traefik/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  labels:
    app: traefik
    app.kubernetes.io/instance: traefik-prd
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: traefik
    app.kubernetes.io/part-of: traefik
    homelab.local/OwnedBy: ElPoshoX
spec:
  selector:
    app: traefik
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: traefik
    homelab.local/OwnedBy: ElPoshoX
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
  - name: websecure
    protocol: TCP
    port: 443
    targetPort: 8443
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  externalTrafficPolicy: Cluster

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-internal
  namespace: traefik
  annotations:
    metallb.universe.tf/address-pool: private
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefi
